--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
+    "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-wallet": "^0.6.3",
     "express": "^4.17.1",
     "ganache-cli": "^6.8.1",
     "mocha": "^7.0.0",
